@@ -3,24 +3,14 @@ declare(strict_types=1);
 
 namespace Nexendrie\BookComponent;
 
+use Nexendrie\Utils\Collection;
+
 /**
  * @author Jakub Konečný
  */
-class BookPagesStorage extends \Nette\Utils\ArrayList {
-  /**
-   * @param mixed $index
-   * @param BookPage $page
-   * @throws \InvalidArgumentException
-   * @throws \RuntimeException
-   */
-  function offsetSet($index, $page) {
-    if(!$page instanceof BookPage) {
-      throw new \InvalidArgumentException("Argument must be of type HelpPage.");
-    } elseif($this->hasPage($page->slug)) {
-      throw new \RuntimeException("Duplicate slug $page->slug.");
-    }
-    parent::offsetSet($index, $page);
-  }
+class BookPagesStorage extends Collection {
+  protected $class = BookPage::class;
+  protected $uniqueProperty = "slug";
   
   /**
    * @param string $slug
